"Right Mouse Selection Action = Selection Tool" causes Tweak selection conflict #100204

Closed
opened 2022-08-04 16:21:16 +02:00 by Julien Kaspar · 14 comments
Member

System Information
Operating system: Linux-5.15.0-41-generic-x86_64-with-glibc2.35 64 Bits
Graphics card: Quadro GP100/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 510.73.05

Blender Version
Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-08-03 07:31, hash: d269fb1d72
Worked: 2.93 (Before the features inclusion)

Short description of error
Since 3.0 the feature to use the Drag tool setting for selection tools has been introduced to right click select.
This can optionally be enabled in the preferences.
Unfortunately this feature to be broken when using the Tweak Tool or the Tweak drag action.

Exact steps for others to reproduce the error

  • In the preferences set the
    • Select with Mouse Button = Right
    • Right Mouse Select Action = Selection Tool
  • Enter Edit Mode
  • Use the Tweak Tool in the Toolbar or set the Drag setting to Tweak in any other Active Tool
  • Loop Select with Alt + Right Click and it will create two undo steps instead of one (Select and Loop Select)
**System Information** Operating system: Linux-5.15.0-41-generic-x86_64-with-glibc2.35 64 Bits Graphics card: Quadro GP100/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 510.73.05 **Blender Version** Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-08-03 07:31, hash: `d269fb1d72` Worked: 2.93 (Before the features inclusion) **Short description of error** Since 3.0 the feature to use the Drag tool setting for selection tools has been introduced to right click select. This can optionally be enabled in the preferences. Unfortunately this feature to be broken when using the Tweak Tool or the Tweak drag action. **Exact steps for others to reproduce the error** - In the preferences set the - Select with Mouse Button = Right - Right Mouse Select Action = Selection Tool - Enter Edit Mode - Use the Tweak Tool in the Toolbar or set the Drag setting to Tweak in any other Active Tool - Loop Select with `Alt + Right Click` and it will create two undo steps instead of one (Select and Loop Select)
Author
Member

Added subscriber: @JulienKaspar

Added subscriber: @JulienKaspar
Author
Member

Added subscriber: @ideasman42

Added subscriber: @ideasman42
Author
Member

@ideasman42 I'm sure I mentioned this issue before but I don't see any report for it. If there is, let me know.

@ideasman42 I'm sure I mentioned this issue before but I don't see any report for it. If there is, let me know.

Added subscriber: @iss

Added subscriber: @iss

I am able to reproduce 2 undo steps, but path select seems to work well here.

I am able to reproduce 2 undo steps, but path select seems to work well here.

Added subscriber: @mano-wii

Added subscriber: @mano-wii

This reminds me of the problem described in #95452 (Multiple calls of 'view3d.select' with LMB selection keymap), but with selection through {key LMB}.
In that situation, the selection operator is also called multiple times, but as the second time doesn't bring anything different, the undo step is not added.

I can imagine that editing the settings could result in problems with undo, but I also can't replicate the problem with the steps described. Is there any detail missing?

This reminds me of the problem described in #95452 (Multiple calls of 'view3d.select' with LMB selection keymap), but with selection through {key LMB}. In that situation, the selection operator is also called multiple times, but as the second time doesn't bring anything different, the undo step is not added. I can imagine that editing the settings could result in problems with undo, but I also can't replicate the problem with the steps described. Is there any detail missing?
Member

Added subscriber: @OmarEmaraDev

Added subscriber: @OmarEmaraDev
Member

Also can't reproduce the path select issue.

Also can't reproduce the path select issue.
Author
Member

Ah I see what's going on with Path Select. Since I am using a pen it is very easy to accidentally do a click-drag. Path select only happens on a click event.
So this is unrelated and not a bug. I'll remove it from the report.

Ah I see what's going on with Path Select. Since I am using a pen it is very easy to accidentally do a click-drag. Path select only happens on a click event. So this is unrelated and not a bug. I'll remove it from the report.
Author
Member

@mano-wii I think this is directly related to #95452. Disabling the conflicting "Edit" level selection keymap entries or the "Tweak" tool entries, solves the issues.
I think we should prioritise these bugs at some point since these conflicts have left the Tweak tool and fallback broken for both right click and left click select for at least a couple releases.

@mano-wii I think this is directly related to #95452. Disabling the conflicting "Edit" level selection keymap entries or the "Tweak" tool entries, solves the issues. I think we should prioritise these bugs at some point since these conflicts have left the Tweak tool and fallback broken for both right click and left click select for at least a couple releases.

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by ed55054e57

This issue was referenced by ed55054e57a35278e90d7ecd512521289d450fd8

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Campbell Barton self-assigned this 2022-08-11 03:10:32 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#100204
No description provided.