Fix T100204: RMB select (with "Select Tool") causes edit-mesh conflict

When RMB select activated the selection tool, Alt-RMB would both
tweak and loop-select.

Fix/workaround this by passing though 'enumerate' unless the option
can be used (when selecting objects or armatures).